# weather_skylogix

./: .gitignore  README.md  env.example  main.py  pyproject.toml
src/: ingest_pg.py  ingest_weather.py
src/data/: __init__.py  ingest_data.py  load_to_pg.py  transform_data.py
src/utils/: __init__.py  logging.py  mongo_client.py  normalize.py  postgresdb_client.py  weather_client.py
